intro header info added

--- a/css/main.css
+++ b/css/main.css
@@ -149,9 +149,9 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
-  color: #5c5c5c;
+  color: #171717;
   scroll-behavior: smooth;
   background: inherit;
 }
@@ -161,7 +161,414 @@ body {
 }
 
 .container {
-  max-width: 1180px;
-  padding: 0 10px;
   margin: 0 auto;
+}
+
+.header {
+  width: 100%;
+  padding: 20px 0;
+  position: absolute;
+  z-index: 2;
+}
+.header-container {
+  max-width: 1850px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+.header__logo {
+  transform: rotate(1.932deg);
+  z-index: 3;
+}
+.header__inner {
+  display: flex;
+  align-items: center;
+}
+.header__nav {
+  margin-left: auto;
+}
+.header__nav-list {
+  display: flex;
+  align-items: center;
+  column-gap: 50px;
+}
+.header__nav-link {
+  font-size: 14px;
+  font-weight: 500;
+  color: #ffffff;
+  text-transform: uppercase;
+  position: relative;
+}
+.header__nav-link::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1.5px;
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  background-color: #ffffff;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s linear;
+}
+@media (hover: hover) {
+  .header__nav-link:hover::before {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.header .hamburger {
+  display: none;
+  width: 54px;
+  height: 54px;
+  margin-left: auto;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.7);
+  position: relative;
+  z-index: 3;
+}
+.header .hamburger__inner {
+  width: 24px;
+  height: 8.3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.header .hamburger span {
+  width: 24px;
+  height: 2.1px;
+  position: relative;
+  transition: all 0.3s;
+  background-color: transparent;
+}
+.header .hamburger span::before {
+  content: "";
+  width: 24px;
+  height: 2.1px;
+  position: absolute;
+  left: 0;
+  background: #f02c38;
+  transition: all 0.3s;
+  transform: translateY(-3px);
+}
+.header .hamburger span::after {
+  content: "";
+  width: 24px;
+  height: 2.1px;
+  position: absolute;
+  left: 0;
+  background: #f02c38;
+  transition: all 0.3s;
+  transform: translateY(3px);
+}
+.header .hamburger.hamburger--active {
+  background-color: #ffffff;
+}
+.header .hamburger.hamburger--active span {
+  width: 24px;
+  height: 2.1px;
+  position: relative;
+  background: transparent;
+}
+.header .hamburger.hamburger--active span::before {
+  transform: rotate(45deg);
+}
+.header .hamburger.hamburger--active span::after {
+  transform: rotate(-45deg);
+}
+
+@media (max-width: 992px) {
+  .header__nav-list {
+    column-gap: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .header__nav {
+    width: 100%;
+    height: 100vh;
+    padding: 140px 40px 40px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #f7f7f7;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: all 0.2s linear;
+  }
+  .header__nav--active {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
+  }
+  .header__nav-list {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .header__nav-item:not(:first-child) {
+    margin-top: 30px;
+  }
+  .header__nav-link {
+    font-family: Cocogoose Narrow;
+    font-size: 56px;
+    color: #171717;
+  }
+  .header .hamburger {
+    display: block;
+  }
+}
+@media (max-width: 576px) {
+  .header__nav-item:not(:first-child) {
+    margin-top: 20px;
+  }
+  .header__nav-link {
+    font-size: 36px;
+  }
+}
+.intro {
+  width: 100%;
+  min-height: 100vh;
+  padding-top: 94px;
+  background-image: url("../../images/intro/intro-bg.jpg");
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+.intro-container {
+  max-width: 1470px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+.intro__title {
+  padding-top: 40px;
+  max-width: 462px;
+  font-family: Cocogoose Narrow;
+  font-size: 72px;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+.intro__bot {
+  width: 100%;
+  height: 360px;
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  background-color: transparent;
+  background-image: url("../../images/intro/intro-bot.png");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: 992px) {
+  .intro__title {
+    padding-top: 75px;
+  }
+}
+@media (max-width: 768px) {
+  .intro {
+    background-position: 70% top;
+  }
+  .intro__title {
+    margin: 0 auto;
+    padding: 0;
+    font-size: 56px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+@media (max-width: 576px) {
+  .intro__title {
+    font-size: 36px;
+  }
+}
+.info {
+  padding: 32px 0 200px;
+  position: relative;
+}
+.info::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translateX(-50%);
+  width: calc(100% - 100px);
+  height: 1px;
+  background: #e1ddd3;
+}
+.info-container {
+  max-width: 1820px;
+  padding: 0 153px;
+}
+.info__inner {
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  column-gap: 106px;
+}
+.info__text {
+  margin-top: 46px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 140%;
+}
+
+@media (max-width: 1440px) {
+  .info {
+    padding: 58px 0 200px;
+  }
+  .info-container {
+    padding: 0 30px;
+    max-width: 1340px;
+  }
+  .info__inner {
+    grid-template-columns: 200px 1fr;
+    column-gap: 139px;
+  }
+  .info__text {
+    max-width: 888px;
+  }
+  .info__text br:first-child,
+  .info__text br:last-child {
+    display: none;
+  }
+}
+@media (max-width: 1240px) {
+  .info {
+    padding: 0 0 130px 0;
+  }
+  .info-container {
+    padding: 0 30px;
+  }
+  .info__inner {
+    grid-template-columns: 200px 1fr;
+    column-gap: 70px;
+  }
+  .info__text {
+    margin-top: 34px;
+    font-size: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .info::after {
+    width: calc(100% - 60px);
+  }
+  .info__inner {
+    column-gap: 35px;
+  }
+  .info__text {
+    font-size: 18px;
+  }
+}
+@media (max-width: 576px) {
+  .info {
+    padding: 24px 0 70px 0;
+  }
+  .info::after {
+    width: calc(100% - 30px);
+  }
+  .info-container {
+    padding: 0 15px;
+  }
+  .info__inner {
+    column-gap: 0;
+    display: flex;
+    flex-direction: column;
+  }
+  .info__text {
+    font-size: 16px;
+    margin-top: 40px;
+  }
+  .info__img {
+    max-width: 150px;
+    align-self: center;
+  }
+}
+.about {
+  padding: 130px 0 564px;
+}
+.about__title {
+  text-align: center;
+  font-family: Cocogoose Narrow;
+  font-size: 72px;
+  text-transform: uppercase;
+  max-width: 1081px;
+  margin: 0 auto;
+}
+.about-container {
+  padding: 0 153px;
+  max-width: 1820px;
+}
+.about__items {
+  margin-top: 115px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 60px;
+}
+.about__item-img {
+  min-height: 68px;
+}
+.about__item-text {
+  margin-top: 40px;
+  font-size: 24px;
+  line-height: 140%;
+}
+
+@media (max-width: 1440px) {
+  .about {
+    padding: 130px 0 392px;
+  }
+  .about-container {
+    padding: 0 30px;
+    max-width: 1400px;
+  }
+}
+@media (max-width: 1160px) {
+  .about {
+    padding: 100px 0 385px;
+  }
+  .about__title {
+    font-size: 56px;
+  }
+  .about__items {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 60px 30px;
+  }
+  .about__item-text {
+    font-size: 20px;
+  }
+}
+@media (max-width: 576px) {
+  .about {
+    padding: 70px 0 204px;
+  }
+  .about__title {
+    font-size: 36px;
+  }
+  .about-container {
+    padding: 0 15px;
+  }
+  .about__items {
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+    gap: 60px;
+  }
+  .about__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .about__item-text {
+    margin-top: 20px;
+    font-size: 18px;
+    text-align: center;
+  }
 }/*# sourceMappingURL=main.css.map */
