--- a/scss/blocks/_event-modal.scss
+++ b/scss/blocks/_event-modal.scss
@@ -6,8 +6,14 @@
     top: 0;
     height: 100%;
     width: 100%;
-    display: none;
+    opacity: 0;
+    visibility: hidden;
     background-color: rgba(0, 0, 0, 0.4);
+    transition: all 300ms linear;
+    &--active {
+      opacity: 1;
+      visibility: visible;
+    }
     &-right {
       padding: 40px 50px 85px;
     }
@@ -51,11 +57,15 @@
     left: 50%;
     top: 50%;
     width: 1514px;
-    transform: translate(-50%, -50%);
+    transform: translateY(40px) translate(-50%, -50%);
     background-color: $white;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     border-radius: 20px;
+    transition: all 400ms linear;
+    &--active {
+      transform: translateY(0) translate(-50%, -50%);
+    }
   }
 }
 @media (max-width: 1920px) {
