--- a/scss/blocks/_event.scss
+++ b/scss/blocks/_event.scss
@@ -33,6 +33,10 @@
     cursor: pointer;
     &-img {
       border-radius: 40px;
+      overflow: hidden;
+      img {
+        transition: all 300ms linear;
+      }
     }
     &-date {
       margin-top: 10px;
@@ -46,6 +50,7 @@
       font-size: 22px;
       font-weight: 500;
       line-height: 140%;
+      transition: all 0.3s linear;
     }
     &-more {
       margin-top: 15px;
@@ -61,6 +66,14 @@
         font-weight: 500;
         line-height: 140%;
         margin-left: 10px;
+      }
+    }
+    @media (hover: hover) {
+      &:hover .event__item-title {
+        color: $primary;
+      }
+      &:hover .event__item-img img {
+        transform: scale(1.2);
       }
     }
   }
