--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -94,7 +94,7 @@
       font-size: 12px;
       font-style: normal;
       font-weight: 300;
-      line-height: 180%; /* 21.6px */
+      line-height: 180%;
       text-decoration: underline !important;
       opacity: 0.7;
     }
