--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -43,17 +43,16 @@
         height: 1.5px;
         position: absolute;
         bottom: -10px;
+        transform: scaleX(0);
+        transform-origin: left;
         left: 0;
         background-color: $white;
-        opacity: 0;
-        visibility: hidden;
-        transition: all 0.2s linear;
+        transition: all 0.3s linear;
       }
 
       @media (hover: hover) {
         &:hover::before {
-          opacity: 1;
-          visibility: visible;
+          transform: scaleX(1);
         }
       }
     }
