--- a/css/main.css
+++ b/css/main.css
@@ -358,7 +358,7 @@ body {
   width: 100%;
   min-height: 100vh;
   padding-top: 94px;
-  background-image: url("../../images/intro/intro-bg.jpg");
+  background-image: url("../../images/intro/intro-bg.webp");
   background-position: center top;
   background-size: cover;
   background-repeat: no-repeat;
@@ -384,7 +384,7 @@ body {
   left: 0;
   bottom: -2px;
   background-color: transparent;
-  background-image: url("../../images/intro/intro-bot.png");
+  background-image: url("../../images/intro/intro-bot.webp");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -518,7 +518,7 @@ body {
 }
 .about {
   padding: 130px 0 564px;
-  background-image: url("../../images//about/about-bg.png");
+  background-image: url("../../images//about/about-bg.webp");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
