--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -1,6 +1,6 @@
 .about {
   padding: 130px 0 564px;
-  background-image: url("../../images//about/about-bg.png");
+  background-image: url("../../images//about/about-bg.webp");
   background-position: center center; // x y
   background-size: cover;
   background-repeat: no-repeat;
