--- a/scss/blocks/_intro.scss
+++ b/scss/blocks/_intro.scss
@@ -2,7 +2,7 @@
   width: 100%;
   min-height: 100vh;
   padding-top: 94px;
-  background-image: url("../../images/intro/intro-bg.jpg");
+  background-image: url("../../images/intro/intro-bg.webp");
   background-position: center top; // x y
   background-size: cover;
   background-repeat: no-repeat;
@@ -30,7 +30,7 @@
     left: 0;
     bottom: -2px;
     background-color: transparent;
-    background-image: url("../../images/intro/intro-bot.png");
+    background-image: url("../../images/intro/intro-bot.webp");
     background-position: center center; // x y
     background-size: cover;
     background-repeat: no-repeat;
